--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.5",
+    "vue3-puzzle-vcode": "^1.1.7",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
